# ChangeLog for x11-themes/gnome-themes
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.179 2007/12/05 21:51:12 eva Exp $

*gnome-themes-2.20.2 (05 Dec 2007)

  05 Dec 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-themes-2.20.2.ebuild:
  bump to 2.20.2

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> gnome-themes-2.20.1.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org> gnome-themes-2.20.1.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> gnome-themes-2.20.1.ebuild:
  Marking gnome-themes-2.20.1 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org> gnome-themes-2.20.1.ebuild:
  alpha/ia64/sparc stable wrt #199740

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org>
  gnome-themes-2.20.1.ebuild:
  Stable on x86 (bug #199740)

  20 Nov 2007; Samuli Suominen <drac@gentoo.org> gnome-themes-2.20.1.ebuild:
  amd64 stable wrt #199740

  17 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-themes-2.16.3.ebuild:
  fix minor QA warning

*gnome-themes-2.20.1 (17 Oct 2007)

  17 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-themes-2.20.1.ebuild:
  bump to 2.20.1

*gnome-themes-2.20.0 (02 Oct 2007)

  02 Oct 2007; Mart Raudsepp <leio@gentoo.org> +gnome-themes-2.20.0.ebuild:
  New series for Gnome 2.20

  22 Sep 2007; Tom Gall <tgall@gentoo.org> gnome-themes-2.18.1.ebuild:
  stable on ppc64

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> gnome-themes-2.18.1.ebuild:
  Stable for HPPA (bug #185823).

  11 Aug 2007; Andrej Kacian <ticho@gentoo.org> gnome-themes-2.18.1.ebuild:
  Stable on x86, bug #185823.

  10 Aug 2007; Christoph Mende <angelos@gentoo.org>
  gnome-themes-2.18.1.ebuild:
  Stable on amd64 wrt bug #185823

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> gnome-themes-2.18.1.ebuild:
  alpha/ia64 stable wrt #185823
