@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gnome-themes-2.10.2.tar.bz2 2563259 RMD160 0283883825666c724c295d98c7103d26d143f541 SHA1 cfdf371f58a724775845c7a5cfaff5386e09b714 SHA256 b78742d9466d1532b02fb781c6ab45733d08b015b8484539cd2bc8cef6778385
 DIST gnome-themes-2.14.2.tar.bz2 2549912 RMD160 9b0679e86e023bd8d83f4f68191078ad1fd089c5 SHA1 d3aad9902e40dd4cbbdce943abe3a476803ea916 SHA256 5385cd75c724743bf6beb65ccd125309e11664658fe10dc8bdd945a581895900
 DIST gnome-themes-2.16.3.tar.bz2 2352795 RMD160 d77c626b14557a35b6ea3c2e5608c27e1bb9b967 SHA1 bfd6403c74b0d78de54d1a106ee4189f0524ea57 SHA256 11349339edf84f745a0f24087c01d1ee5b74eb4806f641d1bcd1e77b1d4ffa3f
@@ -11,6 +14,13 @@ EBUILD gnome-themes-2.16.3.ebuild 832 RMD160 34aed0a0ff7ac839ed29d6f9a8e79475bdb
 EBUILD gnome-themes-2.18.1.ebuild 903 RMD160 1daf14402eab5fe3efab1818df00925c75a7d64d SHA1 e85ecc7c86a34b3fd1946f12e718900382fca1c6 SHA256 937bdbbdf8170eda1dc94225af991dc1c7d885fadc3fe42cb2756306e044e4a9
 EBUILD gnome-themes-2.20.0.ebuild 854 RMD160 b2b7d9949c51d55d3bbf0c98980cb484c55e1c94 SHA1 e3358bae2467d2e363a58dbd066cd4d3da9aaf5b SHA256 b49219e1a96bf5095ced51b47862dea22965248f910b14055426fddbf1a4fa08
 EBUILD gnome-themes-2.20.1.ebuild 840 RMD160 0d1a400c4d8a88c1d553b994843f47a4c35fc12a SHA1 dd7541359bf293c5ac17532b60b149c69b05a134 SHA256 01a1e2454812c6bc23ade9fa65812df9030dd0842a7499e4646c566df50c89ab
-EBUILD gnome-themes-2.20.2.ebuild 850 RMD160 d68023d50f529f187ecc99f7c0330cb2b0e39a5d SHA1 1d8b6bd44540053471eca83c8e0fd177bbac702f SHA256 9c4f89c5eb09ba6ba35918b71b11593906c41b1694a734288ce1769c644199c6
-MISC ChangeLog 21636 RMD160 a7e7a8ea142c01864fad08ef060e17871ec7bfa9 SHA1 dc4a589afd64e2777e047f3e1f2056f560fe85ef SHA256 88bbf1037bfc70ed4a6f77f828e47c06ed443933615a2dcf6ce7d0f2c9e9fdcf
+EBUILD gnome-themes-2.20.2.ebuild 848 RMD160 fa73bca68004043f1d7bd3f543ba57eba7f5c9d3 SHA1 9c2abf2d5dd990730076140da8f7557fceaae9a3 SHA256 e86fedeb628773063d5c016cf73bdef819a8ed7f9188c5492ee40ba714afdbc3
+MISC ChangeLog 21749 RMD160 d376488af83826cf3d98fbe73a1053832358322e SHA1 4e2a67ce157168fb0d52e84b7cc480857984b04c SHA256 efadd5d83ceaf9e427b7bdab9c2703e0cf1d50af131f8350d04862c769610de8
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHoxASNQqtfCuFneMRArriAJwKmEX2T6zdXx4pRldRQAr3m0rFtQCfbDsx
+WjJRNuz386K+hX4iC/lK3gY=
+=gmdV
+-----END PGP SIGNATURE-----
