@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gnome-themes
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.179 2007/12/05 21:51:12 eva Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.180 2008/02/01 12:26:06 opfer Exp $
+
+  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
+  gnome-themes-2.20.2.ebuild:
+  stable x86, bug 208366
 
 *gnome-themes-2.20.2 (05 Dec 2007)
 
